# rtjs

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  res.qrc
TestTarget/: CMakeLists.txt  main.cpp  out.cpp  x.cpp  x.h
TestTarget/cmake/: rtjs.cmake
templates/: class.tpl  function.tpl  handler1.tpl  init-head.tpl  init.tpl
